# smauto

./: .gitignore  Dockerfile  README.md  bedroom_aircondition.py  bedroom_humidifier.py  bedroom_humidity_sensor.py  bedroom_temperature_sensor.py  build.sh  docker-compose.yml  env  kitchen_gas_sensor.py  main.py  requirements.txt  setup.cfg  setup.py
examples/advanced_condition/: AdvancedConditions.py  SimpleHomeAutomation.py  aircondition.py  model.auto  simplehomeautomation_entities.py  system_clock.py  temperature_sensor.py
examples/deprecated/smart_home/: smart_home.auto
examples/deprecated/smart_home_2/: smart_home.auto
examples/example_1/: example_1.auto
examples/example_2/: example_2.auto
examples/example_3/: example_3.auto
examples/hackathon/example_1/: alarm.py  bedroom_humidifier.py  bedroom_humidity_sensor.py  bedroom_temperature_sensor.py  example_1.auto  example_1.smauto  kitchen_gas_sensor.py
examples/hackathon/mission_1/: mission_1.auto
examples/hackathon/mission_3/: mission_3.auto
examples/multi_broker/: README.md  model.auto
examples/sbucket/: 0.11.0  locsys_env_a_entities.py
examples/sbucket/locsys_example/: SimpleHomeAutomation.py  entities.py  model.auto  test_example.py
examples/self_start/: SimpleHomeAutomation.py  model.auto  simplehomeautomation_entities.py
examples/simple_dep/: SimpleHomeAutomation.py  model.auto  simplehomeautomation_entities.py
examples/simple_example/: README.md  README.mg  SimpleHomeAutomation.py  bedroom_lamp.py  model.auto  motion_detector.py  simple_model.smauto  simplehomeautomation_entities.py  system_clock.py
examples/simple_model/: README.md  aircondition.py  simple_model.smauto  temperature_sensor.py  trigger.py  trigger_a1.py  weather_station.py  window.py
examples/smart_home/: smart_home.auto
examples/system_clock_buildin/: SytemClockUsageExample.py  bedroom_lamp.py  model.auto  system_clock.py  sytemclockusageexample_entities.py
examples/time_type/: model.auto
examples/workshop_assignments/example_1/: HackathonExampleA.py  alarm.py  bedroom_aircondition.py  bedroom_humidity_sensor.py  bedroom_temperature_sensor.py  example_1.auto  hackathonexamplea_entities.py  kitchen_gas_sensor.py
examples/workshop_assignments/example_2/: env_sensor.py  example_2.auto
examples/workshop_assignments/mission_1/: mission_1.auto
examples/workshop_assignments/mission_3/: mission_3.auto
lib/: visualize.py
models/: system_clock.smauto
models/broker/: fake_broker.smauto
models/entity/: system_clock.smauto
smauto/: __init__.py  cli.py  definitions.py  generator.py  interpreter.py  language.py
smauto/api/: api.py
smauto/builtin_models/broker/: fake_broker.smauto
smauto/builtin_models/entity/: system_clock.ent
smauto/cli/: cli.py
smauto/grammar/: automation.tx  broker.tx  communication.tx  condition.tx  entity.tx  smauto.tx  types.tx  utils.tx
smauto/lang/: automation.tx  smartauto.tx  smauto.tx
smauto/lib/: automation.py  broker.py  condition.py  entity.py  types.py
smauto/templates/: actuator.py.jinja  attr_value_gen.py  clock.py.jinja  entity.py.jinja  sensor.py.jinja  smauto.py.jinja  ventity_merged.py.jinja
smauto/transformations/: __init__.py  entity_to_code.py  smauto_m2t.py  ventities_merged.py
