[metadata]
name = smauto
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Domain-Specific Language for smart automations.
keywords = smauto
url =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = smauto
zip_safe = False
install_requires =
	click==7.1.2
	colorama==0.4.4
	pydantic==1.10.4
	commlib-py>=0.10.6
	fastapi>=0.68.0,<0.69.0
	pydantic>=1.8.0,<2.0.0
	uvicorn>=0.15.0,<0.16.0
	textX==3.1.1
	rich==13.4.2
    numpy==1.25.1
    aiofiles==23.1.0
    jinja2==3.1.2

include_package_data = True
package_dir =
    smauto = smauto

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.entry_points]
textx_languages =
    smauto = smauto:smauto_language

console_scripts =
    smauto = smauto.cli.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:comm_idl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs .git/*, .eggs/*, .tox/*, build/*, dist/*, venv/*

[aliases]
# Define setup.py command aliases here

